tests/fails/attrstore.t


terra foo()
	var a =  3
	terralib.attrstore(&a,4,4)
end

foo()